# provision-machines

./: .ansible-lint  .ansible-lint-ignore  .devcontainer  .gitignore  .prettierignore  AGENTS.md  README.md  REFACTORED_IMPLEMENTATION.md  REVIEW.md  add_pass_statements.py  ci-inventory.yaml  comment_out_blocks.py  compose.yaml  comprehensive_fix.py  final_fix.py  fix_all_errors.py  fix_block_markers.py  fix_home_paths.py  fix_indentation.py  fix_pyinfra.py  fix_syntax.py  install.sh  inventory.py  issues.md  playbook.yml  provision.sh  pyinfra_requirements.txt  pyproject.toml  renovate.json  requirements.yml  run.py  test_config_access.py
.devcontainer/: ansible
.devcontainer/ansible/: Dockerfile  devcontainer.json
.github/: renovate-snapshot.json  renovate-snapshot.yaml
.github/workflows/: ci.yaml  (+1 more)
group_data/: all.py  ci.py
operations/: filesystem.py  filesystem_test.py  github_release_binary.py  homebrew.py  include_children.py  user.py
pyinfra/: .gitignore  AGENTS.md  ANSIBLE_PYINFRA_COMPARISON.md  README.md  compose.yaml  deploy.py  e2e_tests_config.py  inventory.py  issues.md  pyinfra_hierarchical_config.md  pyproject.toml
pyinfra/config/: ci.py  global.py
pyinfra/deploys/: alacritty.py  backup_burp.py  bash.py  basicsetup.py  displaylink_driver.py  firefox.py  fluxcd.py  gnome.py  hashicorp_apt_repo.py  hashicorp_vault_cli.py  homebrew.py  intellij.py  kubectl.py  lazygit.py  motd.py  nvim.py  nvm.py  okular.py  ollama.py  openwebui.py  php_development.py  python.py  snap.py  sysctl.py  tmux.py  ubuntu_cleanup.py  ubuntu_desktop.py  vagrant.py  vifm.py  zed.py  zsh.py
pyinfra/deploys/ai_agent_devcontainer/: config.py  deploy.py  test.py
pyinfra/deploys/ai_agent_devcontainer/files/: start-ai-agent-devcontainer.sh
pyinfra/deploys/backup_burp/: deploy.py
pyinfra/deploys/bash/: deploy.py
pyinfra/deploys/basic_utils/: deploy.py  deploy_minimal.py
pyinfra/deploys/basicsetup/: config.py  deploy.py
pyinfra/deploys/cleanup_scripts/: deploy.py
pyinfra/deploys/cleanup_scripts/files/: cleanup-script.sh
pyinfra/deploys/devcontainer_cli/: deploy.py
pyinfra/deploys/development_tools/: deploy.py
pyinfra/deploys/development_tools/alacritty/: deploy.py
pyinfra/deploys/development_tools/python/: deploy.py
pyinfra/deploys/development_tools/python/uv/: deploy.py
pyinfra/deploys/development_tools/vshn_tools/: deploy.py
pyinfra/deploys/displaylink_driver/: deploy.py
pyinfra/deploys/docker/: deploy.py
pyinfra/deploys/docker/files/: docker-events-track.service
pyinfra/deploys/firefox/: deploy.py
pyinfra/deploys/flatpak/: deploy.py
pyinfra/deploys/flatpak/files/: flatpak-upgrade.sh
pyinfra/deploys/fluxcd/: deploy.py
pyinfra/deploys/fzf/: deploy.py
pyinfra/deploys/git_lfs/: deploy.py
pyinfra/deploys/gnome/: deploy.py
pyinfra/deploys/hashicorp_apt_repo/: deploy.py
pyinfra/deploys/hashicorp_vault_cli/: deploy.py
pyinfra/deploys/homebrew/: deploy.py
pyinfra/deploys/intellij/: deploy.py
pyinfra/deploys/kubectl/: deploy.py
pyinfra/deploys/lazygit/: deploy.py
pyinfra/deploys/motd/: deploy.py
pyinfra/deploys/nvim/: deploy.py
pyinfra/deploys/nvm/: deploy.py
pyinfra/deploys/okular/: deploy.py
pyinfra/deploys/ollama/: deploy.py
pyinfra/deploys/openwebui/: deploy.py
pyinfra/deploys/openwebui/files/: docker-compose.yml
pyinfra/deploys/openwebui/files/searngx/: settings.yml
pyinfra/deploys/php_development/: deploy.py
pyinfra/deploys/snap/: deploy.py
pyinfra/deploys/sysctl/: deploy.py
pyinfra/deploys/tmux/: deploy.py
pyinfra/deploys/ubuntu_cleanup/: deploy.py
pyinfra/deploys/ubuntu_desktop/: deploy.py
pyinfra/deploys/update_packages_script/: deploy.py
pyinfra/deploys/vagrant/: deploy.py
pyinfra/deploys/vifm/: deploy.py
pyinfra/deploys/vshn_emergency_credentials_receive/: deploy.py
pyinfra/deploys/zed/: deploy.py
pyinfra/deploys/zsh/: deploy.py
pyinfra/group_data/: all.py  ci.py  laptop.py
pyinfra/operations/: __init__.py  common.py  filesystem.py  filesystem_test.py  github_release_binary.py  include_children.py  test_github_release_binary.py
pyinfra/pyinfra_collections/: __init__.py
pyinfra/pyinfra_collections/applications/: __init__.py  displaylink_driver.py  intellij.py  okular.py  ubuntu_desktop.py
pyinfra/pyinfra_collections/basic_utils/: __init__.py  deploy.py
pyinfra/pyinfra_collections/basic_utils/group_data/: all.py
pyinfra/pyinfra_collections/basic_utils/inventory/: local.py
pyinfra/pyinfra_collections/basic_utils/tasks/: __init__.py  bash.py  bat.py  direnv.py  flatpak.py  flutter.py  gcr_ssh_agent.py  ghostty.py  go.py  java.py  keepassxc.py  lazygit.py  motd.py  openvpn.py  python.py  rambox.py  signal.py  snap.py  ssh_agent.py  ssh_config.py  user_bin.py  vifm.py  zoom.py
pyinfra/pyinfra_collections/basic_utils/templates/: flutter-proxy.j2
pyinfra/pyinfra_collections/basic_utils/tests/: __init__.py  test_deploy.py
pyinfra/pyinfra_collections/development_tools/: __init__.py  ai_agent_devcontainer.py  alacritty.py  deploy.py  devcontainer_cli.py  fzf.py  nvim.py  zed.py
pyinfra/pyinfra_collections/development_tools/group_data/: all.py
pyinfra/pyinfra_collections/runtime_environments/: __init__.py  backup_burp.py  basicsetup.py  deploy.py  docker.py  fluxcd.py  git_lfs.py  hashicorp_vault_cli.py  homebrew.py  kubectl.py  lazygit.py  nvm.py  ollama.py  openwebui.py  php_development.py  python.py  sysctl.py  tmux.py  ubuntu_cleanup.py  update_packages_script.py  vagrant.py  vshn_emergency_credentials_receive.py  vshn_tools.py  zsh.py
pyinfra/scripts/: __init__.py  deploy.py  install-pyinfra.sh  ruff_cmd.py  run_pyinfra_local.py
pyinfra/shared/: __init__.py  install_github_binary.py
pyinfra/shared/operations/: __init__.py
pyinfra/shared/utilities/: __init__.py
pyinfra/tests/: conftest.py  test_install_github_binary.py
scripts/: debug-inventory.py  lint.py  run_pyinfra_local.py  run_pyinfra_single.py  update-renovate-snapshot.py  update-renovate-snapshot.sh  update-us-ai-models.py
tasks/: ansible-ppa.yml  basicsetup.yml  java.yml  ubuntu_desktop.yml
(+178 files in other folders)
