[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provision-machines"
version = "0.1.0"
description = "Pyinfra deployment scripts for provisioning development machines"
requires-python = ">=3.10"

dependencies = [
    "pyinfra==3.9.2",
]

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest==9.1.1",
    "ruff==0.15.20",
    "types-requests==2.33.0.20260518",
]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
ignore = ["E501", "B008", "C901"]
select = ["E", "W", "F", "B", "C4", "UP", "I"]

[tool.ruff.lint.isort]
known-first-party = ["deploys", "group_data", "operations", "scripts"]
known-third-party = ["pyinfra"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = "(scripts/update-us-ai-models.py|deploys/development_tools/ai_agent_devcontainer/files)"
explicit_package_bases = true
namespace_packages = true
no_implicit_optional = true
python_version = "3.10"
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--cov=.", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["provision_machines"]
