[build-system]
requires = ["poetry-core==2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "provision-machines"
version = "0.1.0"
description = "Provision development machines using Pyinfra"
authors = ["BacLuc"]
readme = "README.md"
packages = [
    { include = "pyinfra_collections" },
    { include = "shared" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.12"
pyinfra = "==3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "==7.4.0"
pytest-mock = "==3.10.0"
pytest-cov = "==4.1.0"
ruff = "==0.6.4"

[tool.poetry.scripts]
ruff-cmd = "scripts.ruff_cmd:main"
deploy = "scripts.deploy:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "tests",
    "pyinfra_collections/basic_utils/tests",
    "pyinfra_collections/development_tools/tests",
    "pyinfra_collections/runtime_environments/tests",
    "pyinfra_collections/applications/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long, handled by formatter
    "B008",  # Do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["pyinfra_collections", "shared", "scripts"]

[tool.coverage.run]
source = ["pyinfra_collections", "shared"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
